Fixing the publisher

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "displayName": "py-toolkit",
   "description": "Python monorepo toolkit: venv management, project discovery, and developer tools",
   "version": "0.3.1",
-  "publisher": "ligeng",
+  "publisher": "mcai4gl2",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ligeng/py-toolkit"
+    "url": "https://github.com/mcai4gl2/py-toolkit"
   },
   "engines": {
     "vscode": "^1.85.0"
