--- a/package.json
+++ b/package.json
@@ -336,6 +336,8 @@
     "lint": "eslint src --ext ts",
     "lint:fix": "eslint src --ext ts --fix",
     "test": "tsc -p ./ && node ./out/test/runTests.js",
+    "test:unit": "tsc -p ./ && mocha --ui tdd out/test/unit/**/*.test.js --require out/test/unit/setup.js",
+    "test:unit:coverage": "tsc -p ./ && c8 mocha --ui tdd out/test/unit/**/*.test.js --require out/test/unit/setup.js",
     "package": "vsce package",
     "publish": "vsce publish"
   },
@@ -348,6 +350,7 @@
     "@typescript-eslint/parser": "^7.0.0",
     "@vscode/test-electron": "^2.3.0",
     "@vscode/vsce": "^3.0.0",
+    "c8": "^10.1.3",
     "eslint": "^8.56.0",
     "glob": "^13.0.1",
     "mocha": "^11.7.5",
